# Schedule_MIL_optimization_pyomo

./: Bounds.py  Constraints.py  Directories.py  Parameters.py  Parameters_example.py  Previous_task.py  README.md  Schedule_MIL_optimization_pyomo.py  Scheduling_maintenance_multiyear.py  Scheduling_task_multiyear.py  Task Manager.py  Task_Manager.py  Task_Managercopy.py  elaborate_and_save_data.py  handling_unfeasibility.py  plot_results.py  pyproject.toml  read_previous_task.py  requirements.txt  time_handling.py
Example/: Parameters_example.py  read_previous_task_example.py  time_handling_example.py
Historic_data/Data/: last_task_data.xlsx
Optimization_tests/Input/: holidays.xlsx  input_2024.xlsx  input_2025.xlsx  input_2026.xlsx
Optimization_tests_results/taske_schedule_iterate/active_unit_folder/: active_unit_2024.pkl  active_unit_2025.pkl  active_unit_2026.pkl
Optimization_tests_results/taske_schedule_iterate/dict_diff_folder/: dict_diff_2024.pkl  dict_diff_2025.pkl  dict_diff_2026.pkl
Optimization_tests_results/taske_schedule_iterate/dict_unit_todotask_folder/: dict_unit_todotask_2024.pkl  dict_unit_todotask_2025.pkl  dict_unit_todotask_2026.pkl
docs/source/: Bounds.md  Constraints.md  Example.md  Handling Unfeasibility.md  Installation.md  Main.md  Parameters.md  Plot Results copy.md  Plot Results.md  Pyomo Optimization Model.md  Read Previous Task copy.md  Read Previous Tasks.md  Read previous task.md  Task Manager Copy.md  Task Manager.md  Time Bounds.md  Time Handling.md  conf.py  index.md  index.rst
(+14 files in other folders)
