[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Schedule MIL optimization pyomo"
authors = [{name = "Federico Sartore", email = "fsartore@student.ethz.ch"}]
dynamic = ["version", "description"]

[project.optional-dependencies] 
doc = [
    "sphinx",
    "myst-parser",
    "furo",
    "nbsphinx",
]
